# terrarium-synth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  syscalls.c
.github/workflows/: build.yml
doc/: controls.afdesign
util/: Blink.h  EffectState.h  Led.cpp  Led.h  LinearRamp.h  Mapping.h  NoiseSynth.h  PersistentSettings.cpp  PersistentSettings.h  SvFilter.h  TapTempo.h  Terrarium.cpp  Terrarium.h  TriangleSynth.h  WaveSynth.h
